--- a/consensus/acs/Cargo.toml
+++ b/consensus/acs/Cargo.toml
@@ -50,3 +50,6 @@ network = { package = "network", git = "https://github.com/akhilsb/libnet-rs.git
 async-trait = "0"
 futures-util = "0"
 reed_solomon_rs = "0.1.2"
+
+[features]
+bandwidth = ["asks/bandwidth","ra/bandwidth","ctrbc/bandwidth"]
