--- a/consensus/acss_ske/Cargo.toml
+++ b/consensus/acss_ske/Cargo.toml
@@ -53,3 +53,6 @@ futures-util = "0"
 reed_solomon_rs = "0.1.2"
 
 lambdaworks-math = "0.11.0"
+
+[features]
+bandwidth = ["ctrbc/bandwidth","asks/bandwidth","ra/bandwidth","avid/bandwidth"]
