--- a/consensus/fin_mvba/Cargo.toml
+++ b/consensus/fin_mvba/Cargo.toml
@@ -50,3 +50,6 @@ reed_solomon_rs = "0.1.2"
 
 # Polynomial Operations with FFT
 lambdaworks-math = "0.11.0"
+
+[features]
+bandwidth = ["ctrbc/bandwidth","ra/bandwidth","binary_ba/bandwidth"]
