--- a/consensus/g_acss/Cargo.toml
+++ b/consensus/g_acss/Cargo.toml
@@ -51,3 +51,6 @@ futures-util = "0"
 reed_solomon_rs = "0.1.2"
 
 lambdaworks-math = "0.11.0"
+
+[features]
+bandwidth = ["ccbrb/bandwidth","asks/bandwidth","ra/bandwidth","avid/bandwidth"]
