--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -30,6 +30,6 @@ simple_logger="*"
 fnv = "1.0.3"
 signal-hook = "0"
 
-network = { package = "network", git = "https://github.com/akhilsb/libnet-rs.git" }
+network = { package = "network", git = "https://github.com/linghe-yang/libnet-rs.git" }
 async-trait = "0"
 futures-util = "0"
