--- a/consensus/hacss/Cargo.toml
+++ b/consensus/hacss/Cargo.toml
@@ -37,7 +37,7 @@ rand_core = "0.6.4"
 num-bigint-dig = "0.4"
 num-bigint = {version = "0.2.6", features = ["rand"]}
 
-network = { package = "network", git = "https://github.com/akhilsb/libnet-rs.git" }
+network = { package = "network", git = "https://github.com/linghe-yang/libnet-rs.git" }
 async-trait = "0"
 futures-util = "0"
 
