--- a/consensus/ibft/Cargo.toml
+++ b/consensus/ibft/Cargo.toml
@@ -33,6 +33,6 @@ reed-solomon-erasure = "4.0"
 num-traits = "0.2.19"
 
 
-network = { package = "network", git = "https://github.com/akhilsb/libnet-rs.git" }
+network = { package = "network", git = "https://github.com/linghe-yang/libnet-rs.git" }
 async-trait = "0"
 futures-util = "0"
